# dextro-iot-cpp-lib

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
examples/: CMakeLists.txt  main.cpp
include/dextro-iot/: client.h  network.h  osal.h
src/: client.cpp  network_posix.cpp  osal_std.cpp
tests/: CMakeLists.txt
